// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for GameComponent test rendering of the BoardComponent that is interactive 1`] = `
<div
  className="board"
>
  <div>
    <div
      className="board__squareRows"
      key="0"
    >
      <div
        key="A1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A1"
          index={0}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="6"
        />
      </div>
      <div
        key="A2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A2"
          index={1}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A3"
          index={2}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A4"
      >
        <input
          className="board__squareRows__square"
          id="A4"
          index={3}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="3"
        />
      </div>
      <div
        key="A5"
      >
        <input
          className="board__squareRows__square"
          id="A5"
          index={4}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A6"
      >
        <input
          className="board__squareRows__square"
          id="A6"
          index={5}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="2"
        />
      </div>
      <div
        key="A7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A7"
          index={6}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A8"
          index={7}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A9"
          index={8}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="1"
    >
      <div
        key="B1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B1"
          index={9}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B2"
          index={10}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="4"
        />
      </div>
      <div
        key="B3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B3"
          index={11}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B4"
      >
        <input
          className="board__squareRows__square"
          id="B4"
          index={12}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B5"
      >
        <input
          className="board__squareRows__square"
          id="B5"
          index={13}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B6"
      >
        <input
          className="board__squareRows__square"
          id="B6"
          index={14}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B7"
          index={15}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B8"
          index={16}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="1"
        />
      </div>
      <div
        key="B9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B9"
          index={17}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="2"
    >
      <div
        key="C1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C1"
          index={18}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C2"
          index={19}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C3"
          index={20}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C4"
      >
        <input
          className="board__squareRows__square"
          id="C4"
          index={21}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C5"
      >
        <input
          className="board__squareRows__square"
          id="C5"
          index={22}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C6"
      >
        <input
          className="board__squareRows__square"
          id="C6"
          index={23}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C7"
          index={24}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C8"
          index={25}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C9"
          index={26}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="3"
    >
      <div
        key="D1"
      >
        <input
          className="board__squareRows__square"
          id="D1"
          index={27}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="7"
        />
      </div>
      <div
        key="D2"
      >
        <input
          className="board__squareRows__square"
          id="D2"
          index={28}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D3"
      >
        <input
          className="board__squareRows__square"
          id="D3"
          index={29}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="2"
        />
      </div>
      <div
        key="D4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D4"
          index={30}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="6"
        />
      </div>
      <div
        key="D5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D5"
          index={31}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D6"
          index={32}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D7"
      >
        <input
          className="board__squareRows__square"
          id="D7"
          index={33}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D8"
      >
        <input
          className="board__squareRows__square"
          id="D8"
          index={34}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D9"
      >
        <input
          className="board__squareRows__square"
          id="D9"
          index={35}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="4"
    >
      <div
        key="E1"
      >
        <input
          className="board__squareRows__square"
          id="E1"
          index={36}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E2"
      >
        <input
          className="board__squareRows__square"
          id="E2"
          index={37}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E3"
      >
        <input
          className="board__squareRows__square"
          id="E3"
          index={38}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E4"
          index={39}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E5"
          index={40}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E6"
          index={41}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E7"
      >
        <input
          className="board__squareRows__square"
          id="E7"
          index={42}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E8"
      >
        <input
          className="board__squareRows__square"
          id="E8"
          index={43}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="5"
        />
      </div>
      <div
        key="E9"
      >
        <input
          className="board__squareRows__square"
          id="E9"
          index={44}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="4"
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="5"
    >
      <div
        key="F1"
      >
        <input
          className="board__squareRows__square"
          id="F1"
          index={45}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="3"
        />
      </div>
      <div
        key="F2"
      >
        <input
          className="board__squareRows__square"
          id="F2"
          index={46}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F3"
      >
        <input
          className="board__squareRows__square"
          id="F3"
          index={47}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F4"
          index={48}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F5"
          index={49}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F6"
          index={50}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F7"
      >
        <input
          className="board__squareRows__square"
          id="F7"
          index={51}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F8"
      >
        <input
          className="board__squareRows__square"
          id="F8"
          index={52}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F9"
      >
        <input
          className="board__squareRows__square"
          id="F9"
          index={53}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="6"
    >
      <div
        key="G1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G1"
          index={54}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G2"
          index={55}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="8"
        />
      </div>
      <div
        key="G3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G3"
          index={56}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G4"
      >
        <input
          className="board__squareRows__square"
          id="G4"
          index={57}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="1"
        />
      </div>
      <div
        key="G5"
      >
        <input
          className="board__squareRows__square"
          id="G5"
          index={58}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="5"
        />
      </div>
      <div
        key="G6"
      >
        <input
          className="board__squareRows__square"
          id="G6"
          index={59}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G7"
          index={60}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G8"
          index={61}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G9"
          index={62}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="7"
    >
      <div
        key="H1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H1"
          index={63}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H2"
          index={64}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H3"
          index={65}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H4"
      >
        <input
          className="board__squareRows__square"
          id="H4"
          index={66}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H5"
      >
        <input
          className="board__squareRows__square"
          id="H5"
          index={67}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="4"
        />
      </div>
      <div
        key="H6"
      >
        <input
          className="board__squareRows__square"
          id="H6"
          index={68}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H7"
          index={69}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="2"
        />
      </div>
      <div
        key="H8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H8"
          index={70}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H9"
          index={71}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="8"
    >
      <div
        key="I1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I1"
          index={72}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I2"
          index={73}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I3"
          index={74}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I4"
      >
        <input
          className="board__squareRows__square"
          id="I4"
          index={75}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I5"
      >
        <input
          className="board__squareRows__square"
          id="I5"
          index={76}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I6"
      >
        <input
          className="board__squareRows__square"
          id="I6"
          index={77}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I7"
          index={78}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="7"
        />
      </div>
      <div
        key="I8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I8"
          index={79}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I9"
          index={80}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="board__controls"
  >
    <section>
      <input
        className="board__controls__inputButton board__controls__inputButton--solve"
        id="sudokuResetBtn"
        onClick={[Function]}
        type="button"
        value="Reset"
      />
    </section>
    <section
      className="autoPick"
    >
      <label>
        Method 1:
      </label>
      <div>
        <input
          className="board__controls__inputButton"
          onClick={[Function]}
          type="button"
          value="Pick a random puzzle"
        />
      </div>
    </section>
    <section>
      <label>
        Method 2: Select a puzzle
      </label>
      <select
        id="puzzles"
        name="Select a puzzle from the list"
        onChange={[Function]}
      >
        <option
          key="96"
          value={null}
        >
          None
        </option>
        <option
          key="1"
          value="4.....8.5.3..........7......2.....6.....8.4......1.......6.3.7.5..2.....1.4......"
        >
          4.....8.5.3..........7......2.....6.....8.4......1.......6.3.7.5..2.....1.4......
        </option>
        <option
          key="2"
          value="52...6.........7.13...........4..8..6......5...........418.........3..2...87....."
        >
          52...6.........7.13...........4..8..6......5...........418.........3..2...87.....
        </option>
        <option
          key="3"
          value="6.....8.3.4.7.................5.4.7.3..2.....1.6.......2.....5.....8.6......1...."
        >
          6.....8.3.4.7.................5.4.7.3..2.....1.6.......2.....5.....8.6......1....
        </option>
        <option
          key="4"
          value="48.3............71.2.......7.5....6....2..8.............1.76...3.....4......5...."
        >
          48.3............71.2.......7.5....6....2..8.............1.76...3.....4......5....
        </option>
        <option
          key="5"
          value="....14....3....2...7..........9...3.6.1.............8.2.....1.4....5.6.....7.8..."
        >
          ....14....3....2...7..........9...3.6.1.............8.2.....1.4....5.6.....7.8...
        </option>
        <option
          key="6"
          value="......52..8.4......3...9...5.1...6..2..7........3.....6...1..........7.4.......3."
        >
          ......52..8.4......3...9...5.1...6..2..7........3.....6...1..........7.4.......3.
        </option>
        <option
          key="7"
          value="6.2.5.........3.4..........43...8....1....2........7..5..27...........81...6....."
        >
          6.2.5.........3.4..........43...8....1....2........7..5..27...........81...6.....
        </option>
        <option
          key="8"
          value=".524.........7.1..............8.2...3.....6...9.5.....1.6.3...........897........"
        >
          .524.........7.1..............8.2...3.....6...9.5.....1.6.3...........897........
        </option>
        <option
          key="9"
          value="6.2.5.........4.3..........43...8....1....2........7..5..27...........81...6....."
        >
          6.2.5.........4.3..........43...8....1....2........7..5..27...........81...6.....
        </option>
        <option
          key="10"
          value=".923.........8.1...........1.7.4...........658.........6.5.2...4.....7.....9....."
        >
          .923.........8.1...........1.7.4...........658.........6.5.2...4.....7.....9.....
        </option>
        <option
          key="11"
          value="6..3.2....5.....1..........7.26............543.........8.15........4.2........7.."
        >
          6..3.2....5.....1..........7.26............543.........8.15........4.2........7..
        </option>
        <option
          key="12"
          value=".6.5.1.9.1...9..539....7....4.8...7.......5.8.817.5.3.....5.2............76..8..."
        >
          .6.5.1.9.1...9..539....7....4.8...7.......5.8.817.5.3.....5.2............76..8...
        </option>
        <option
          key="13"
          value="..5...987.4..5...1..7......2...48....9.1.....6..2.....3..6..2.......9.7.......5.."
        >
          ..5...987.4..5...1..7......2...48....9.1.....6..2.....3..6..2.......9.7.......5..
        </option>
        <option
          key="14"
          value="3.6.7...........518.........1.4.5...7.....6.....2......2.....4.....8.3.....5....."
        >
          3.6.7...........518.........1.4.5...7.....6.....2......2.....4.....8.3.....5.....
        </option>
        <option
          key="15"
          value="1.....3.8.7.4..............2.3.1...........958.........5.6...7.....8.2...4......."
        >
          1.....3.8.7.4..............2.3.1...........958.........5.6...7.....8.2...4.......
        </option>
        <option
          key="16"
          value="6..3.2....4.....1..........7.26............543.........8.15........4.2........7.."
        >
          6..3.2....4.....1..........7.26............543.........8.15........4.2........7..
        </option>
        <option
          key="17"
          value="....3..9....2....1.5.9..............1.2.8.4.6.8.5...2..75......4.1..6..3.....4.6."
        >
          ....3..9....2....1.5.9..............1.2.8.4.6.8.5...2..75......4.1..6..3.....4.6.
        </option>
        <option
          key="18"
          value="45.....3....8.1....9...........5..9.2..7.....8.........1..4..........7.2...6..8.."
        >
          45.....3....8.1....9...........5..9.2..7.....8.........1..4..........7.2...6..8..
        </option>
        <option
          key="19"
          value=".237....68...6.59.9.....7......4.97.3.7.96..2.........5..47.........2....8......."
        >
          .237....68...6.59.9.....7......4.97.3.7.96..2.........5..47.........2....8.......
        </option>
        <option
          key="20"
          value="..84...3....3.....9....157479...8........7..514.....2...9.6...2.5....4......9..56"
        >
          ..84...3....3.....9....157479...8........7..514.....2...9.6...2.5....4......9..56
        </option>
        <option
          key="21"
          value=".98.1....2......6.............3.2.5..84.........6.........4.8.93..5...........1.."
        >
          .98.1....2......6.............3.2.5..84.........6.........4.8.93..5...........1..
        </option>
        <option
          key="22"
          value="..247..58..............1.4.....2...9528.9.4....9...1.........3.3....75..685..2..."
        >
          ..247..58..............1.4.....2...9528.9.4....9...1.........3.3....75..685..2...
        </option>
        <option
          key="23"
          value="4.....8.5.3..........7......2.....6.....5.4......1.......6.3.7.5..2.....1.9......"
        >
          4.....8.5.3..........7......2.....6.....5.4......1.......6.3.7.5..2.....1.9......
        </option>
        <option
          key="24"
          value=".2.3......63.....58.......15....9.3....7........1....8.879..26......6.7...6..7..4"
        >
          .2.3......63.....58.......15....9.3....7........1....8.879..26......6.7...6..7..4
        </option>
        <option
          key="25"
          value="1.....7.9.4...72..8.........7..1..6.3.......5.6..4..2.........8..53...7.7.2....46"
        >
          1.....7.9.4...72..8.........7..1..6.3.......5.6..4..2.........8..53...7.7.2....46
        </option>
        <option
          key="26"
          value="4.....3.....8.2......7........1...8734.......6........5...6........1.4...82......"
        >
          4.....3.....8.2......7........1...8734.......6........5...6........1.4...82......
        </option>
        <option
          key="27"
          value=".......71.2.8........4.3...7...6..5....2..3..9........6...7.....8....4......5...."
        >
          .......71.2.8........4.3...7...6..5....2..3..9........6...7.....8....4......5....
        </option>
        <option
          key="28"
          value="6..3.2....4.....8..........7.26............543.........8.15........8.2........7.."
        >
          6..3.2....4.....8..........7.26............543.........8.15........8.2........7..
        </option>
        <option
          key="29"
          value=".47.8...1............6..7..6....357......5....1..6....28..4.....9.1...4.....2.69."
        >
          .47.8...1............6..7..6....357......5....1..6....28..4.....9.1...4.....2.69.
        </option>
        <option
          key="30"
          value="......8.17..2........5.6......7...5..1....3...8.......5......2..4..8....6...3...."
        >
          ......8.17..2........5.6......7...5..1....3...8.......5......2..4..8....6...3....
        </option>
        <option
          key="31"
          value="38.6.......9.......2..3.51......5....3..1..6....4......17.5..8.......9.......7.32"
        >
          38.6.......9.......2..3.51......5....3..1..6....4......17.5..8.......9.......7.32
        </option>
        <option
          key="32"
          value="...5...........5.697.....2...48.2...25.1...3..8..3.........4.7..13.5..9..2...31.."
        >
          ...5...........5.697.....2...48.2...25.1...3..8..3.........4.7..13.5..9..2...31..
        </option>
        <option
          key="33"
          value=".2.......3.5.62..9.68...3...5..........64.8.2..47..9....3.....1.....6...17.43...."
        >
          .2.......3.5.62..9.68...3...5..........64.8.2..47..9....3.....1.....6...17.43....
        </option>
        <option
          key="34"
          value=".8..4....3......1........2...5...4.69..1..8..2...........3.9....6....5.....2....."
        >
          .8..4....3......1........2...5...4.69..1..8..2...........3.9....6....5.....2.....
        </option>
        <option
          key="35"
          value="..8.9.1...6.5...2......6....3.1.7.5.........9..4...3...5....2...7...3.8.2..7....4"
        >
          ..8.9.1...6.5...2......6....3.1.7.5.........9..4...3...5....2...7...3.8.2..7....4
        </option>
        <option
          key="36"
          value="4.....5.8.3..........7......2.....6.....5.8......1.......6.3.7.5..2.....1.8......"
        >
          4.....5.8.3..........7......2.....6.....5.8......1.......6.3.7.5..2.....1.8......
        </option>
        <option
          key="37"
          value="1.....3.8.6.4..............2.3.1...........958.........5.6...7.....8.2...4......."
        >
          1.....3.8.6.4..............2.3.1...........958.........5.6...7.....8.2...4.......
        </option>
        <option
          key="38"
          value="1....6.8..64..........4...7....9.6...7.4..5..5...7.1...5....32.3....8...4........"
        >
          1....6.8..64..........4...7....9.6...7.4..5..5...7.1...5....32.3....8...4........
        </option>
        <option
          key="39"
          value="249.6...3.3....2..8.......5.....6......2......1..4.82..9.5..7....4.....1.7...3..."
        >
          249.6...3.3....2..8.......5.....6......2......1..4.82..9.5..7....4.....1.7...3...
        </option>
        <option
          key="40"
          value="...8....9.873...4.6..7.......85..97...........43..75.......3....3...145.4....2..1"
        >
          ...8....9.873...4.6..7.......85..97...........43..75.......3....3...145.4....2..1
        </option>
        <option
          key="41"
          value="...5.1....9....8...6.......4.1..........7..9........3.8.....1.5...2..4.....36...."
        >
          ...5.1....9....8...6.......4.1..........7..9........3.8.....1.5...2..4.....36....
        </option>
        <option
          key="42"
          value="......8.16..2........7.5......6...2..1....3...8.......2......7..3..8....5...4...."
        >
          ......8.16..2........7.5......6...2..1....3...8.......2......7..3..8....5...4....
        </option>
        <option
          key="43"
          value=".476...5.8.3.....2.....9......8.5..6...1.....6.24......78...51...6....4..9...4..7"
        >
          .476...5.8.3.....2.....9......8.5..6...1.....6.24......78...51...6....4..9...4..7
        </option>
        <option
          key="44"
          value=".....7.95.....1...86..2.....2..73..85......6...3..49..3.5...41724................"
        >
          .....7.95.....1...86..2.....2..73..85......6...3..49..3.5...41724................
        </option>
        <option
          key="45"
          value=".4.5.....8...9..3..76.2.....146..........9..7.....36....1..4.5..6......3..71..2.."
        >
          .4.5.....8...9..3..76.2.....146..........9..7.....36....1..4.5..6......3..71..2..
        </option>
        <option
          key="46"
          value=".834.........7..5...........4.1.8..........27...3.....2.6.5....5.....8........1.."
        >
          .834.........7..5...........4.1.8..........27...3.....2.6.5....5.....8........1..
        </option>
        <option
          key="47"
          value="..9.....3.....9...7.....5.6..65..4.....3......28......3..75.6..6...........12.3.8"
        >
          ..9.....3.....9...7.....5.6..65..4.....3......28......3..75.6..6...........12.3.8
        </option>
        <option
          key="48"
          value=".26.39......6....19.....7.......4..9.5....2....85.....3..2..9..4....762.........4"
        >
          .26.39......6....19.....7.......4..9.5....2....85.....3..2..9..4....762.........4
        </option>
        <option
          key="49"
          value="2.3.8....8..7...........1...6.5.7...4......3....1............82.5....6...1......."
        >
          2.3.8....8..7...........1...6.5.7...4......3....1............82.5....6...1.......
        </option>
        <option
          key="50"
          value="6..3.2....1.....5..........7.26............843.........8.15........8.2........7.."
        >
          6..3.2....1.....5..........7.26............843.........8.15........8.2........7..
        </option>
        <option
          key="51"
          value="1.....9...64..1.7..7..4.......3.....3.89..5....7....2.....6.7.9.....4.1....129.3."
        >
          1.....9...64..1.7..7..4.......3.....3.89..5....7....2.....6.7.9.....4.1....129.3.
        </option>
        <option
          key="52"
          value=".........9......84.623...5....6...453...1...6...9...7....1.....4.5..2....3.8....9"
        >
          .........9......84.623...5....6...453...1...6...9...7....1.....4.5..2....3.8....9
        </option>
        <option
          key="53"
          value=".2....5938..5..46.94..6...8..2.3.....6..8.73.7..2.........4.38..7....6..........5"
        >
          .2....5938..5..46.94..6...8..2.3.....6..8.73.7..2.........4.38..7....6..........5
        </option>
        <option
          key="54"
          value="9.4..5...25.6..1..31......8.7...9...4..26......147....7.......2...3..8.6.4.....9."
        >
          9.4..5...25.6..1..31......8.7...9...4..26......147....7.......2...3..8.6.4.....9.
        </option>
        <option
          key="55"
          value="...52.....9...3..4......7...1.....4..8..453..6...1...87.2........8....32.4..8..1."
        >
          ...52.....9...3..4......7...1.....4..8..453..6...1...87.2........8....32.4..8..1.
        </option>
        <option
          key="56"
          value="53..2.9...24.3..5...9..........1.827...7.........981.............64....91.2.5.43."
        >
          53..2.9...24.3..5...9..........1.827...7.........981.............64....91.2.5.43.
        </option>
        <option
          key="57"
          value="1....786...7..8.1.8..2....9........24...1......9..5...6.8..........5.9.......93.4"
        >
          1....786...7..8.1.8..2....9........24...1......9..5...6.8..........5.9.......93.4
        </option>
        <option
          key="58"
          value="....5...11......7..6.....8......4.....9.1.3.....596.2..8..62..7..7......3.5.7.2.."
        >
          ....5...11......7..6.....8......4.....9.1.3.....596.2..8..62..7..7......3.5.7.2..
        </option>
        <option
          key="59"
          value=".47.2....8....1....3....9.2.....5...6..81..5.....4.....7....3.4...9...1.4..27.8.."
        >
          .47.2....8....1....3....9.2.....5...6..81..5.....4.....7....3.4...9...1.4..27.8..
        </option>
        <option
          key="60"
          value="......94.....9...53....5.7..8.4..1..463...........7.8.8..7.....7......28.5.26...."
        >
          ......94.....9...53....5.7..8.4..1..463...........7.8.8..7.....7......28.5.26....
        </option>
        <option
          key="61"
          value=".2......6....41.....78....1......7....37.....6..412....1..74..5..8.5..7......39.."
        >
          .2......6....41.....78....1......7....37.....6..412....1..74..5..8.5..7......39..
        </option>
        <option
          key="62"
          value="1.....3.8.6.4..............2.3.1...........758.........7.5...6.....8.2...4......."
        >
          1.....3.8.6.4..............2.3.1...........758.........7.5...6.....8.2...4.......
        </option>
        <option
          key="63"
          value="2....1.9..1..3.7..9..8...2.......85..6.4.........7...3.2.3...6....5.....1.9...2.5"
        >
          2....1.9..1..3.7..9..8...2.......85..6.4.........7...3.2.3...6....5.....1.9...2.5
        </option>
        <option
          key="64"
          value="..7..8.....6.2.3...3......9.1..5..6.....1.....7.9....2........4.83..4...26....51."
        >
          ..7..8.....6.2.3...3......9.1..5..6.....1.....7.9....2........4.83..4...26....51.
        </option>
        <option
          key="65"
          value="...36....85.......9.4..8........68.........17..9..45...1.5...6.4....9..2.....3..."
        >
          ...36....85.......9.4..8........68.........17..9..45...1.5...6.4....9..2.....3...
        </option>
        <option
          key="66"
          value="34.6.......7.......2..8.57......5....7..1..2....4......36.2..1.......9.......7.82"
        >
          34.6.......7.......2..8.57......5....7..1..2....4......36.2..1.......9.......7.82
        </option>
        <option
          key="67"
          value="......4.18..2........6.7......8...6..4....3...1.......6......2..5..1....7...3...."
        >
          ......4.18..2........6.7......8...6..4....3...1.......6......2..5..1....7...3....
        </option>
        <option
          key="68"
          value=".4..5..67...1...4....2.....1..8..3........2...6...........4..5.3.....8..2........"
        >
          .4..5..67...1...4....2.....1..8..3........2...6...........4..5.3.....8..2........
        </option>
        <option
          key="69"
          value=".......4...2..4..1.7..5..9...3..7....4..6....6..1..8...2....1..85.9...6.....8...3"
        >
          .......4...2..4..1.7..5..9...3..7....4..6....6..1..8...2....1..85.9...6.....8...3
        </option>
        <option
          key="70"
          value="8..7....4.5....6............3.97...8....43..5....2.9....6......2...6...7.71..83.2"
        >
          8..7....4.5....6............3.97...8....43..5....2.9....6......2...6...7.71..83.2
        </option>
        <option
          key="71"
          value=".8...4.5....7..3............1..85...6.....2......4....3.26............417........"
        >
          .8...4.5....7..3............1..85...6.....2......4....3.26............417........
        </option>
        <option
          key="72"
          value="....7..8...6...5...2...3.61.1...7..2..8..534.2..9.......2......58...6.3.4...1...."
        >
          ....7..8...6...5...2...3.61.1...7..2..8..534.2..9.......2......58...6.3.4...1....
        </option>
        <option
          key="73"
          value="......8.16..2........7.5......6...2..1....3...8.......2......7..4..8....5...3...."
        >
          ......8.16..2........7.5......6...2..1....3...8.......2......7..4..8....5...3....
        </option>
        <option
          key="74"
          value=".2..........6....3.74.8.........3..2.8..4..1.6..5.........1.78.5....9..........4."
        >
          .2..........6....3.74.8.........3..2.8..4..1.6..5.........1.78.5....9..........4.
        </option>
        <option
          key="75"
          value=".52..68.......7.2.......6....48..9..2..41......1.....8..61..38.....9...63..6..1.9"
        >
          .52..68.......7.2.......6....48..9..2..41......1.....8..61..38.....9...63..6..1.9
        </option>
        <option
          key="76"
          value="....1.78.5....9..........4..2..........6....3.74.8.........3..2.8..4..1.6..5....."
        >
          ....1.78.5....9..........4..2..........6....3.74.8.........3..2.8..4..1.6..5.....
        </option>
        <option
          key="77"
          value="1.......3.6.3..7...7...5..121.7...9...7........8.1..2....8.64....9.2..6....4....."
        >
          1.......3.6.3..7...7...5..121.7...9...7........8.1..2....8.64....9.2..6....4.....
        </option>
        <option
          key="78"
          value="4...7.1....19.46.5.....1......7....2..2.3....847..6....14...8.6.2....3..6...9...."
        >
          4...7.1....19.46.5.....1......7....2..2.3....847..6....14...8.6.2....3..6...9....
        </option>
        <option
          key="79"
          value="......8.17..2........5.6......7...5..1....3...8.......5......2..3..8....6...4...."
        >
          ......8.17..2........5.6......7...5..1....3...8.......5......2..3..8....6...4....
        </option>
        <option
          key="80"
          value="963......1....8......2.5....4.8......1....7......3..257......3...9.2.4.7......9.."
        >
          963......1....8......2.5....4.8......1....7......3..257......3...9.2.4.7......9..
        </option>
        <option
          key="81"
          value="15.3......7..4.2....4.72.....8.........9..1.8.1..8.79......38...........6....7423"
        >
          15.3......7..4.2....4.72.....8.........9..1.8.1..8.79......38...........6....7423
        </option>
        <option
          key="82"
          value="..........5724...98....947...9..3...5..9..12...3.1.9...6....25....56.....7......6"
        >
          ..........5724...98....947...9..3...5..9..12...3.1.9...6....25....56.....7......6
        </option>
        <option
          key="83"
          value="....75....1..2.....4...3...5.....3.2...8...1.......6.....1..48.2........7........"
        >
          ....75....1..2.....4...3...5.....3.2...8...1.......6.....1..48.2........7........
        </option>
        <option
          key="84"
          value="6.....7.3.4.8.................5.4.8.7..2.....1.3.......2.....5.....7.9......1...."
        >
          6.....7.3.4.8.................5.4.8.7..2.....1.3.......2.....5.....7.9......1....
        </option>
        <option
          key="85"
          value="....6...4..6.3....1..4..5.77.....8.5...8.....6.8....9...2.9....4....32....97..1.."
        >
          ....6...4..6.3....1..4..5.77.....8.5...8.....6.8....9...2.9....4....32....97..1..
        </option>
        <option
          key="86"
          value=".32.....58..3.....9.428...1...4...39...6...5.....1.....2...67.8.....4....95....6."
        >
          .32.....58..3.....9.428...1...4...39...6...5.....1.....2...67.8.....4....95....6.
        </option>
        <option
          key="87"
          value="...5.3.......6.7..5.8....1636..2.......4.1.......3...567....2.8..4.7.......2..5.."
        >
          ...5.3.......6.7..5.8....1636..2.......4.1.......3...567....2.8..4.7.......2..5..
        </option>
        <option
          key="88"
          value=".5.3.7.4.1.........3.......5.8.3.61....8..5.9.6..1........4...6...6927....2...9.."
        >
          .5.3.7.4.1.........3.......5.8.3.61....8..5.9.6..1........4...6...6927....2...9..
        </option>
        <option
          key="89"
          value="..5..8..18......9.......78....4.....64....9......53..2.6.........138..5....9.714."
        >
          ..5..8..18......9.......78....4.....64....9......53..2.6.........138..5....9.714.
        </option>
        <option
          key="90"
          value="..........72.6.1....51...82.8...13..4.........37.9..1.....238..5.4..9.........79."
        >
          ..........72.6.1....51...82.8...13..4.........37.9..1.....238..5.4..9.........79.
        </option>
        <option
          key="91"
          value="...658.....4......12............96.7...3..5....2.8...3..19..8..3.6.....4....473.."
        >
          ...658.....4......12............96.7...3..5....2.8...3..19..8..3.6.....4....473..
        </option>
        <option
          key="92"
          value=".2.3.......6..8.9.83.5........2...8.7.9..5........6..4.......1...1...4.22..7..8.9"
        >
          .2.3.......6..8.9.83.5........2...8.7.9..5........6..4.......1...1...4.22..7..8.9
        </option>
        <option
          key="93"
          value=".5..9....1.....6.....3.8.....8.4...9514.......3....2..........4.8...6..77..15..6."
        >
          .5..9....1.....6.....3.8.....8.4...9514.......3....2..........4.8...6..77..15..6.
        </option>
        <option
          key="94"
          value=".....2.......7...17..3...9.8..7......2.89.6...13..6....9..5.824.....891.........."
        >
          .....2.......7...17..3...9.8..7......2.89.6...13..6....9..5.824.....891..........
        </option>
        <option
          key="95"
          value="3...8.......7....51..............36...2..4....7...........6.13..452...........8.."
        >
          3...8.......7....51..............36...2..4....7...........6.13..452...........8..
        </option>
      </select>
    </section>
    <section>
      <label>
        Method 3: input your own
      </label>
      <textarea
        className="board__controls__userInput"
        onChange={[Function]}
      />
    </section>
    <section>
      <label
        className="board_controls__infoLabel"
      >
        Performance benchmark: 
      </label>
      <div
        className="performanceBenchmark"
      />
    </section>
  </div>
</div>
`;

exports[`Test for GameComponent test rendering of the BoardComponent that is not Interactive 1`] = `
<div
  className="board"
>
  <div>
    <div
      className="board__squareRows"
      key="0"
    >
      <div
        key="A1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A1"
          index={0}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A2"
          index={1}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A3"
          index={2}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A4"
      >
        <input
          className="board__squareRows__square"
          id="A4"
          index={3}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A5"
      >
        <input
          className="board__squareRows__square"
          id="A5"
          index={4}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A6"
      >
        <input
          className="board__squareRows__square"
          id="A6"
          index={5}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A7"
          index={6}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A8"
          index={7}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="A9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="A9"
          index={8}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="1"
    >
      <div
        key="B1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B1"
          index={9}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B2"
          index={10}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B3"
          index={11}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B4"
      >
        <input
          className="board__squareRows__square"
          id="B4"
          index={12}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B5"
      >
        <input
          className="board__squareRows__square"
          id="B5"
          index={13}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B6"
      >
        <input
          className="board__squareRows__square"
          id="B6"
          index={14}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B7"
          index={15}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B8"
          index={16}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="B9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="B9"
          index={17}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="2"
    >
      <div
        key="C1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C1"
          index={18}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C2"
          index={19}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C3"
          index={20}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C4"
      >
        <input
          className="board__squareRows__square"
          id="C4"
          index={21}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C5"
      >
        <input
          className="board__squareRows__square"
          id="C5"
          index={22}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C6"
      >
        <input
          className="board__squareRows__square"
          id="C6"
          index={23}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C7"
          index={24}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C8"
          index={25}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="C9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="C9"
          index={26}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="3"
    >
      <div
        key="D1"
      >
        <input
          className="board__squareRows__square"
          id="D1"
          index={27}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D2"
      >
        <input
          className="board__squareRows__square"
          id="D2"
          index={28}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D3"
      >
        <input
          className="board__squareRows__square"
          id="D3"
          index={29}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D4"
          index={30}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D5"
          index={31}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="D6"
          index={32}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D7"
      >
        <input
          className="board__squareRows__square"
          id="D7"
          index={33}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D8"
      >
        <input
          className="board__squareRows__square"
          id="D8"
          index={34}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="D9"
      >
        <input
          className="board__squareRows__square"
          id="D9"
          index={35}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="4"
    >
      <div
        key="E1"
      >
        <input
          className="board__squareRows__square"
          id="E1"
          index={36}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E2"
      >
        <input
          className="board__squareRows__square"
          id="E2"
          index={37}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E3"
      >
        <input
          className="board__squareRows__square"
          id="E3"
          index={38}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E4"
          index={39}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E5"
          index={40}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="E6"
          index={41}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E7"
      >
        <input
          className="board__squareRows__square"
          id="E7"
          index={42}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E8"
      >
        <input
          className="board__squareRows__square"
          id="E8"
          index={43}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="E9"
      >
        <input
          className="board__squareRows__square"
          id="E9"
          index={44}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="5"
    >
      <div
        key="F1"
      >
        <input
          className="board__squareRows__square"
          id="F1"
          index={45}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F2"
      >
        <input
          className="board__squareRows__square"
          id="F2"
          index={46}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F3"
      >
        <input
          className="board__squareRows__square"
          id="F3"
          index={47}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F4"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F4"
          index={48}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F5"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F5"
          index={49}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F6"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="F6"
          index={50}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F7"
      >
        <input
          className="board__squareRows__square"
          id="F7"
          index={51}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F8"
      >
        <input
          className="board__squareRows__square"
          id="F8"
          index={52}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="F9"
      >
        <input
          className="board__squareRows__square"
          id="F9"
          index={53}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="6"
    >
      <div
        key="G1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G1"
          index={54}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G2"
          index={55}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G3"
          index={56}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G4"
      >
        <input
          className="board__squareRows__square"
          id="G4"
          index={57}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G5"
      >
        <input
          className="board__squareRows__square"
          id="G5"
          index={58}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G6"
      >
        <input
          className="board__squareRows__square"
          id="G6"
          index={59}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G7"
          index={60}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G8"
          index={61}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="G9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="G9"
          index={62}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="7"
    >
      <div
        key="H1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H1"
          index={63}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H2"
          index={64}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H3"
          index={65}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H4"
      >
        <input
          className="board__squareRows__square"
          id="H4"
          index={66}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H5"
      >
        <input
          className="board__squareRows__square"
          id="H5"
          index={67}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H6"
      >
        <input
          className="board__squareRows__square"
          id="H6"
          index={68}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H7"
          index={69}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H8"
          index={70}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="H9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="H9"
          index={71}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="board__squareRows"
      key="8"
    >
      <div
        key="I1"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I1"
          index={72}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I2"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I2"
          index={73}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I3"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I3"
          index={74}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I4"
      >
        <input
          className="board__squareRows__square"
          id="I4"
          index={75}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I5"
      >
        <input
          className="board__squareRows__square"
          id="I5"
          index={76}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I6"
      >
        <input
          className="board__squareRows__square"
          id="I6"
          index={77}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I7"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I7"
          index={78}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I8"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I8"
          index={79}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        key="I9"
      >
        <input
          className="board__squareRows__square board__squareRows__square--highlighted"
          id="I9"
          index={80}
          maxLength="1"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
